fixed invisible box issue

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ a:visited {
     left: 0;
     width: 100%;
     height: 100%;
+    padding-bottom: 0;
 }
 
 main {
